WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
215243
Web process crashes at WebCore::FullscreenManager::didExitFullscreen
https://bugs.webkit.org/show_bug.cgi?id=215243
Summary
Web process crashes at WebCore::FullscreenManager::didExitFullscreen
Peng Liu
Reported
2020-08-06 14:21:13 PDT
Web process crashes at WebCore::FullscreenManager::didExitFullscreen
Attachments
Patch
(1.55 KB, patch)
2020-08-06 14:54 PDT
,
Peng Liu
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Peng Liu
Comment 1
2020-08-06 14:21:48 PDT
<
rdar://problem/65105885
>
Peng Liu
Comment 2
2020-08-06 14:54:09 PDT
Created
attachment 406120
[details]
Patch
EWS
Comment 3
2020-08-06 17:23:54 PDT
Committed
r265357
: <
https://trac.webkit.org/changeset/265357
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 406120
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug