Web process crashes at WebCore::FullscreenManager::didExitFullscreen https://bugs.webkit.org/show_bug.cgi?id=215243

Reviewed by Eric Carlson.

No new tests, no functional change.

* dom/FullscreenManager.cpp:
(WebCore::FullscreenManager::didExitFullscreen):
m_fullscreenElement might be nullptr when fullscreenOrPendingElement() is not nullptr.


Canonical link: https://commits.webkit.org/228035@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@265357 268f45cc-cd09-0410-ab3c-d52691b4dbfc